Descrevendo o modelo de representação de problema; Refatoração de código devido a atualização da versão do Java.