@@ -1,7 +1,6 @@
 package com.wandson.food.api.assembler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,6 +20,6 @@ public class EstadoModelAssembler {
 	}
 
 	public List<EstadoModel> toCollectionModel(List<Estado> estados) {
-		return estados.stream().map(this::toModel).collect(Collectors.toList());
+		return estados.stream().map(this::toModel).toList();
 	}
 }
