@@ -2,7 +2,6 @@ package com.wandson.food.api.assembler;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,7 +21,7 @@ public class GrupoModelAssembler {
 	}
 
 	public List<GrupoModel> toCollectionModel(Collection<Grupo> grupos) {
-		return grupos.stream().map(this::toModel).collect(Collectors.toList());
+		return grupos.stream().map(this::toModel).toList();
 	}
 
 }
