@@ -1,7 +1,6 @@
 package com.wandson.food.api.assembler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,7 +16,7 @@ public class PedidoResumoModelAssembler {
 	private ModelMapper modelMapper;
 
 	public List<PedidoResumoModel> toCollectionModel(List<Pedido> pedidos) {
-		return pedidos.stream().map(this::toModel).collect(Collectors.toList());
+		return pedidos.stream().map(this::toModel).toList();
 	}
 
 	private PedidoResumoModel toModel(Pedido pedido) {
